--- a/test_boot.html
+++ b/test_boot.html
@@ -14,7 +14,7 @@
                             ul = $("<ul>"); // create a new ul element
                         // iterate over the array and build the list
                         for (var i = 0, l = obj.length; i < l; ++i) {
-                            ul.append("<li>" + obj[i].id + "--" + obj[i].description + "</a></li>");
+                            ul.append("<li>" + obj[i].id + "--" + obj[i].description + "</li>");
                         }
                         $("#div1").html(ul);
                     }
